--- a/magick-app/package.json
+++ b/magick-app/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon -L src/index.js",
     "docker:dev": "docker-compose up",
     "docker:dev-build": "docker-compose up --build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "4.14.0",
+    "multer": "1.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "1.11.0"
   }
 }
